--- a/src/todo
+++ b/src/todo
@@ -1,38 +1,2 @@
-TODO
-- [x] item class with position, height, id
-- [x] function that converts an item id to a name
-- [x] use this to draw texture of item, (pos.x,pos.y-height)
-- [x] draw black and translucent version of shadow on ground
-- [x] items fall when not on ground
-- [x] function that saves and loads all items
-- [ ] grab individual items instead of vacuum affect
-- [ ] items show stack size
-- [ ] can merge together into bigger stack
-- [ ] remove all current guis and create universal gui object that all types inherit
-- [ ] add ability to create guis with a text file that then get imported
-something like:
-MainMenu:
-button 0.5 0.5 0.2 0.2 #ffffff 1 (last parameter is index of click func)
-anchor 0.5 0.5 (pos is defined from middle of object)
-panel 0.5 0.5 1 1
-endGui
-NewGame:
-blah blah blah blah
-you get the point
-
-New Game
-
-0    chunk ID
-2    No. Items
-0    Item 1 ID
--1.5 Item 1 X
-2    Item 1 Y
-0    Item 2 ID
--3   Item 2 X
-4    Item 2 Y
-1    chunk ID
-1    No. Items
-2    Item 1 ID
-2.5  Item 1 X
-1.67 Item 1 Y
-
+[ ] need to add container functionality to panel
+[ ] need to add guilabel
