--- a/src/todo
+++ b/src/todo
@@ -1,45 +1,7 @@
-files to comment:
-guiinputfield
-guilabel
-guiobject
-guipanel
-guisaveslot
-guislider
-loadgame
-settings
-json
-savehandler
-table
-x hitbox
-x hitboxcircle
-x hitboxrect
-x hitboxshape
-x clickfuncs
-x binds
-x inputhandler
-x main
-x utils
-x gui
-x guicheckbox
-x guibutton
-x guigalaxy
-x guihandler
-x guiimage
-
-
-files to document:
-settings
-gui slider
-gui checkbox
-gui galaxy
-gui
-guihandler
-load game
-binds
-json
-table
-savehandler
-utils
-
-
-12 to go!!
+OPTIMISATIONS TO BE MADE
+files get huge due to number of item objects in circulation
+plan of attack:
+-make id system just same as index into arrays
+-remove any items when they enter a building if they wont be exiting it straight after
+(such as in recipes, storage silo etc.)
+should massively improve memory usage etc.
