--- a/src/todo
+++ b/src/todo
@@ -21,7 +21,7 @@ iron gear DONE
 empty iron barrel DONE
 B pumpjack DONE
 B upgraded conveyors, etc DONE
-crude oil barrel
+crude oil barrel DONE
 B oil refinery
 petroleum barrel
 plastic
