--- a/src/todo
+++ b/src/todo
@@ -1,3 +1,46 @@
+ROCKET FEATURES
+these are all things to do on tuesday:
+-for probe gui, add menu that lets you select target destination
+-once target destination is set and rocket is launched, add a rocket silo to that menu
+-add a way to store which planets have been unlocked (maybe in game class)
+-add planet switcher that just lets you scroll through the planets and change the active planet
+-add different background colours and generation algorithms to planets
+-if not probe gui, same gui but if you click on a planet there has to be a rocket silo there
+-need to implement some way to fill up the rocket storage tank (maybe just dont do it)
+
+
+
+
+other features to add today:
+- planet viewer (this will probably take a while)
+
+TUTORIAL SYSTEM
+things to do:
+- add tutorial class
+- write the text of each stage of the tutorial as a table text file
+- figure out a way to only allow certain inputs in each tutorial stage
+- make certain events trigger next tutorial stage
+time taken: 5 days?
+
+days left
+26.1 sun - finish all buildings and structures
+27.1 mon - way to switch to other planets
+28.1 tues documentation
+29.1 wed documentation
+30.1 thurs --TUTORIAL START--
+31.1 fri
+1.2 sat
+2.2 sun --TUTORIAL END --
+3.2 mon -- STAKEHOLDER FEEDBACK START --
+4.2 tues
+5.2 wed
+6.2 thurs
+7.2 fri --STAKEHOLDER FEEDBACK END --
+8.2 sat -- COMMENTING OUT CODE --
+9.2 sun -- COMMENTING OUT CODE --
+10.2 mon submission
+
+
 
 tech tree:
 iron plate DONE
@@ -36,34 +79,3 @@ rocket payload
 rocket thruster
 B/Item rocket launch silo
 boom we have rocket travel
-
-
-
-other features to add today:
-- planet viewer (this will probably take a while)
-
-TUTORIAL SYSTEM
-things to do:
-- add tutorial class
-- write the text of each stage of the tutorial as a table text file
-- figure out a way to only allow certain inputs in each tutorial stage
-- make certain events trigger next tutorial stage
-time taken: 5 days?
-
-days left
-26.1 sun - finish all buildings and structures
-27.1 mon - way to switch to other planets
-28.1 tues - improve terrain gen
-29.1 wed -add some stuff to the moon, mars, venus if have time
-30.1 thurs --TUTORIAL START--
-31.1 fri
-1.2 sat
-2.2 sun --TUTORIAL END --
-3.2 mon -- STAKEHOLDER FEEDBACK START --
-4.2 tues
-5.2 wed
-6.2 thurs
-7.2 fri --STAKEHOLDER FEEDBACK END --
-8.2 sat -- COMMENTING OUT CODE --
-9.2 sun -- COMMENTING OUT CODE --
-10.2 mon submission
